--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,6 @@
 @use './partials/_header.scss';
 @use './partials/_footer.scss';
+@use './partials/create';
 // @import '~bootstrap/scss/bootstrap';
 
 *{
