fix: scss problem

--- a/resources/scss/partials/_create.scss
+++ b/resources/scss/partials/_create.scss
@@ -4,7 +4,7 @@ $form-background-color: #363b45;
 $input-background-color: #444;
 $border-color: #555;
 
-.container {
+.show-container {
   display: flex;
   align-items: center;
   justify-content: center;
