--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -73,3 +73,13 @@ body {
         }
     }
 }
+
+#homepage-btn{
+    display: flex;
+    gap: 10px;
+    
+    form{
+        padding: 0;
+        width: 60px;
+    }
+}
