--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -46,6 +46,7 @@ body {
     margin: 20px;
     padding: 15px;
     transition: transform 0.3s ease-in-out;
+    width: 100%;
 
     &:hover {
         transform: scale(1.05);
@@ -77,9 +78,16 @@ body {
 #homepage-btn{
     display: flex;
     gap: 10px;
-    
+
     form{
         padding: 0;
         width: 60px;
     }
+}
+
+.btn-red{
+    background-color: red;
+    &:hover {
+        background-color: darken(red, 30%);
+      }
 }
