ADDED view controller

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,25 +1,27 @@
-@use './partials/_header.scss';
-@use './partials/_footer.scss';
-@use './partials/create';
+@use "./partials/_header.scss";
+@use "./partials/_footer.scss";
+@use "./partials/create";
 // @import '~bootstrap/scss/bootstrap';
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-ol,ul,menu{
+ol,
+ul,
+menu {
     list-style: none;
 }
-a{
+a {
     color: currentColor;
     text-decoration: none;
 }
 
 body {
     background-color: #0c0c0c; /* Nero scuro */
-    font-family: 'Roboto', sans-serif; /* Carattere moderno */
+    font-family: "Roboto", sans-serif; /* Carattere moderno */
     color: #ffffff; /* Testo bianco */
 }
 
@@ -75,19 +77,19 @@ body {
     }
 }
 
-#homepage-btn{
+#homepage-btn {
     display: flex;
     gap: 10px;
 
-    form{
+    form {
         padding: 0;
         width: 60px;
     }
 }
 
-.btn-red{
+.btn-red {
     background-color: red;
     &:hover {
         background-color: darken(red, 30%);
-      }
+    }
 }
