--- a/resources/scss/partials/_create.scss
+++ b/resources/scss/partials/_create.scss
@@ -5,52 +5,70 @@ $input-background-color: #444;
 $border-color: #555;
 
 .show-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: $background-color;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    gap: 20px;
+    background-color: $background-color;
 }
 
 form {
-  background-color: $form-background-color;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 300px;
+    background-color: $form-background-color;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: 300px;
 
-  div {
-    margin-bottom: 15px;
+    div {
+        margin-bottom: 15px;
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-      color: $primary-color;
+        label {
+            display: block;
+            margin-bottom: 5px;
+            color: $primary-color;
+        }
+
+        input,
+        textarea {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border: 1px solid $border-color;
+            border-radius: 4px;
+            background-color: $input-background-color;
+            color: #fff;
+
+            &:focus {
+                outline: none;
+                border-color: $primary-color;
+            }
+        }
+
+        textarea {
+            resize: vertical;
+        }
     }
 
-    input,
-    textarea {
-      width: 100%;
-      padding: 10px;
-      box-sizing: border-box;
-      border: 1px solid $border-color;
-      border-radius: 4px;
-      background-color: $input-background-color;
-      color: #fff;
+    button {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        border: none;
+        border-radius: 4px;
+        background-color: $primary-color;
+        color: #fff;
+        cursor: pointer;
 
-      &:focus {
-        outline: none;
-        border-color: $primary-color;
-      }
+        &:hover {
+            background-color: darken($primary-color, 10%);
+        }
     }
+}
 
-    textarea {
-      resize: vertical;
-    }
-  }
-
-  button {
-    width: 100%;
+button {
+    // width: 100%;
     padding: 10px;
     box-sizing: border-box;
     border: none;
@@ -60,22 +78,6 @@ form {
     cursor: pointer;
 
     &:hover {
-      background-color: darken($primary-color, 10%);
+        background-color: darken($primary-color, 10%);
     }
-  }
-}
-
-button {
-  // width: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 4px;
-  background-color: $primary-color;
-  color: #fff;
-  cursor: pointer;
-
-  &:hover {
-    background-color: darken($primary-color, 10%);
-  }
 }
