Add: fix items list class name & css

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -116,3 +116,10 @@ body {
         flex-shrink: 0;
     }
 }
+
+.items_list{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
