fix Header login and register

--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -9,4 +9,8 @@ header {
         gap: 20px;
         padding: 20px;
     }
+    .nav{
+        display: flex;
+        justify-content: space-between;
+    }
 }
